added basic window example and some fixes

--- a/BeefProj.toml
+++ b/BeefProj.toml
@@ -1,5 +1,5 @@
 FileVersion = 1
-Dependencies = {corlib = "*", corlib = "*"}
+Dependencies = {corlib = "*", corlib = "*", corlib = "*"}
 
 [Project]
 Name = "BeefRaylibBindings"
@@ -9,4 +9,9 @@ DefaultNamespace = "Raylib"
 
 [Configs.Debug.Win64]
 CLibType = "Static"
-LibPaths = ["$(ProjectDir)/lib/raylib.lib"]
+LibPaths = ["$(ProjectDir)/lib/raylib.lib", "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64/WinMM.lib", "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64/Gdi32.lib", "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64/User32.lib", "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64/Shell32.lib"]
+
+[[ProjectFolder.Items]]
+Type = "IgnoreFolder"
+Name = "Examples"
+AutoInclude = true
